# simulation-master

./: readme.md
data/maps/: double_lift.txt  lane_change.txt  line1.txt  line2.txt
data/results/: 2024_09_02_21_29_27.txt  2024_09_20_15_14_06.txt  2024_09_20_15_49_15.txt
src/basic/car_interfaces/: CMakeLists.txt  package.xml
src/basic/car_interfaces/msg/: GpsInterface.msg  LocalPathPlanningInterface.msg  LocalPredictionInterface.msg  PidInterface.msg
src/basic/hmi/: package.xml  setup.py
src/basic/hmi/hmi/: hmi.py
src/basic/pid/: setup.py
src/basic/pid/launch/: pid.launch.py
src/basic/pid/pid/: config.yaml  pid.py
src/basic/pid/test/: controlData.txt
src/basic/planner/: CMakeLists.txt  package.xml
src/basic/planner/config/: config.yaml
src/basic/planner/include/: planner.hpp  planner_tools.hpp
src/basic/planner/launch/: planner.launch.py
src/basic/planner/src/: main.cpp  planner.cpp  planner_tools.cpp
src/basic/sim_model/: package.xml  setup.py
src/basic/sim_model/config/: calibration_table.txt
src/basic/sim_model/sim_model/: fake_gps.py  sim_model.py
src/basic/start_simulation/: package.xml  setup.cfg  setup.py
src/basic/start_simulation/config/: simulation.yaml
src/basic/start_simulation/launch/: start_simulation.launch.py
src/extension/lateral_mpc/: CMakeLists.txt  package.xml
src/extension/lateral_mpc/config/: config.yaml  lateral_mpc.yaml
src/extension/lateral_mpc/include/: lateral_mpc.hpp
src/extension/lateral_mpc/launch/: lateral_mpc.launch.py
src/extension/lateral_mpc/src/: lateral_mpc.cpp  main.cpp
src/extension/linear_mpc/: CMakeLists.txt  package.xml
src/extension/linear_mpc/config/: linear_mpc.yaml
src/extension/linear_mpc/include/: linear_mpc.hpp
src/extension/linear_mpc/launch/: linear_mpc.launch.py
src/extension/linear_mpc/src/: linear_mpc.cpp  main.cpp
src/extension/longitudinal_mpc/: package.xml  setup.cfg  setup.py
src/extension/longitudinal_mpc/config/: config.yaml
src/extension/longitudinal_mpc/launch/: longitudinal_mpc.launch.py
src/extension/longitudinal_mpc/longitudinal_mpc/: longitudinal_mpc.py
src/extension/trajectory_mpc/: CMakeLists.txt  package.xml
src/extension/trajectory_mpc/config/: config.yaml  trajectory_mpc.yaml
src/extension/trajectory_mpc/include/: trajectory_mpc.hpp
src/extension/trajectory_mpc/launch/: trajectory_mpc.launch.py
src/extension/trajectory_mpc/src/: main.cpp  trajectory_mpc.cpp
